Code cleanup (#166)